--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.jpa.hibernate.ddl-auto=create
 
 #to be able to see the sql queries in the log
 spring.jpa.defer-datasource-initialization=true
+
+#spring.flyway.baseline-on-migrate=true
+#spring.flyway.url=  we use this if we want to keep track of changes in a different database.
+# If we don't specify another url, it will use the default one.
+
+spring.flyway.enabled=false
+#this means do not look for database source information in application.properties.
+# in this case, since it should look for somewhere else we create a method in the runner class.
